--- a/aws-node-http-api-project/package.json
+++ b/aws-node-http-api-project/package.json
@@ -10,5 +10,8 @@
     "serverless-offline": "^12.0.4",
     "serverless-plugin-typescript": "^2.1.4",
     "typescript": "^4.9.4"
+  },
+  "dependencies": {
+    "aws-sdk": "^2.1303.0"
   }
 }
