--- a/aws-node-http-api-project/package.json
+++ b/aws-node-http-api-project/package.json
@@ -5,13 +5,15 @@
     "bcryptjs": "^2.4.3",
     "bcryptjs-then": "^1.0.1",
     "jsonwebtoken": "^8.2.1",
-    "mongoose": "6.8.4",
     "serverless-dynamodb-local": "^0.2.40",
     "serverless-offline": "^12.0.4",
     "serverless-plugin-typescript": "^2.1.4",
     "typescript": "^4.9.4"
   },
   "dependencies": {
-    "aws-sdk": "^2.1303.0"
+    "aws-sdk": "^2.1303.0",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.0",
+    "uuid": "^9.0.0"
   }
 }
