--- a/aws-node-http-api-project/package.json
+++ b/aws-node-http-api-project/package.json
@@ -11,6 +11,7 @@
     "typescript": "^4.9.4"
   },
   "dependencies": {
+    "aws-lambda": "^1.0.7",
     "aws-sdk": "^2.1303.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
