--- a/aws-node-http-api-project/package.json
+++ b/aws-node-http-api-project/package.json
@@ -2,8 +2,11 @@
   "main": "handler.ts",
   "devDependencies": {
     "@aws-sdk/client-dynamodb": "^3.254.0",
-    "bcryptjs": "^2.4.3",
-    "bcryptjs-then": "^1.0.1",
+    "aws-lambda": "^1.0.7",
+    "aws-sdk": "^2.1303.0",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.0",
+    "uuid": "^9.0.0",
     "jsonwebtoken": "^8.2.1",
     "serverless-dynamodb-local": "^0.2.40",
     "serverless-offline": "^12.0.4",
@@ -11,10 +14,6 @@
     "typescript": "^4.9.4"
   },
   "dependencies": {
-    "aws-lambda": "^1.0.7",
-    "aws-sdk": "^2.1303.0",
-    "class-transformer": "^0.5.1",
-    "class-validator": "^0.14.0",
-    "uuid": "^9.0.0"
+    "bcrypt": "5.1.0"
   }
 }
