Add ability to login

--- a/aws-node-http-api-project/serverless.yml
+++ b/aws-node-http-api-project/serverless.yml
@@ -23,3 +23,9 @@ functions:
       - httpApi:
           path: /register
           method: post
+  loginUser:
+    handler: lib/user/login/controller.login
+    events:
+      - httpApi:
+          path: /login
+          method: post
