--- a/aws-node-http-api-project/serverless.yml
+++ b/aws-node-http-api-project/serverless.yml
@@ -5,10 +5,29 @@ plugins:
   - serverless-plugin-typescript
   - serverless-dynamodb-local
   - serverless-offline
+  - serverless-plugin-include-dependencies
 
 provider:
   name: aws
-  runtime: nodejs14.x
+  stage: dev
+  region: eu-west-1
+  runtime: nodejs16.x
+
+resources:
+  Resources:
+    UsersTable:
+      Type: AWS::DynamoDB::Table
+      Properties:
+        TableName: Users
+        AttributeDefinitions:
+          - AttributeName: email
+            AttributeType: S
+        KeySchema:
+          - AttributeName: email
+            KeyType: HASH
+        ProvisionedThroughput:
+          ReadCapacityUnits: 1
+          WriteCapacityUnits: 1
 
 functions:
   getUser:
