--- a/aws-node-http-api-project/package.json
+++ b/aws-node-http-api-project/package.json
@@ -6,14 +6,16 @@
     "aws-sdk": "^2.1303.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
-    "uuid": "^9.0.0",
-    "jsonwebtoken": "^8.2.1",
+    "jsonwebtoken": "8.5.1",
     "serverless-dynamodb-local": "^0.2.40",
     "serverless-offline": "^12.0.4",
+    "serverless-plugin-include-dependencies": "^5.0.0",
     "serverless-plugin-typescript": "^2.1.4",
-    "typescript": "^4.9.4"
+    "typescript": "^4.9.4",
+    "uuid": "^9.0.0"
   },
   "dependencies": {
-    "bcrypt": "5.1.0"
+    "bcrypt": "5.1.0",
+    "jsonwebtoken": "8.5.1"
   }
 }
