--- a/nodejs/serverless.yml
+++ b/nodejs/serverless.yml
@@ -12,6 +12,9 @@ provider:
   region: eu-west-1
   runtime: nodejs18.x
 
+package:
+  excludeDevDependencies: false
+
 resources:
   Resources:
     UsersTable:
