--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,14 +19,14 @@ jobs:
       - run:
           name: Install Serverless CLI and dependencies
           command: |
-            sudo npm i -g serverless
+            sudo npm i -g serverless@3.26.0
             npm install
 
       - save_cache:
           paths:
             - node_modules
           key: v1-dependencies-
-          
+
       - run:
           name: Deploy application
           command: sls deploy --stage pre
