--- a/nodejs/package.json
+++ b/nodejs/package.json
@@ -6,6 +6,7 @@
     "aws-sdk": "^2.1303.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
+    "dotenv": "^16.0.3",
     "jsonwebtoken": "9.0.0",
     "serverless-dynamodb-local": "^0.2.40",
     "serverless-offline": "^12.0.4",
@@ -14,6 +15,11 @@
     "uuid": "^9.0.0"
   },
   "dependencies": {
+    "dotenv-cli": "^7.0.0",
     "jsonwebtoken": "9.0.0"
+  },
+  "scripts": {
+    "start": "dotenv -e .env.local serverless offline",
+    "deploy": "dotenv -e .env.dev serverless deploy"
   }
 }
