JUS-8 Update subscription to be able to create only one possible email

--- a/nodejs/serverless.yml
+++ b/nodejs/serverless.yml
@@ -30,15 +30,15 @@ resources:
         ProvisionedThroughput:
           ReadCapacityUnits: 1
           WriteCapacityUnits: 1
-    SubscriptionToEmail:
+    SubscriptionsToEmail:
       Type: AWS::DynamoDB::Table
       Properties:
-        TableName: SubscriptionsToEmail
+        TableName: SubscriptionToEmail
         AttributeDefinitions:
-          - AttributeName: id
+          - AttributeName: email
             AttributeType: S
         KeySchema:
-          - AttributeName: id
+          - AttributeName: email
             KeyType: HASH
         ProvisionedThroughput:
           ReadCapacityUnits: 1
@@ -57,29 +57,15 @@ functions:
       - httpApi:
           path: /register
           method: post
-          cors:
-            origin: "*"
-            headers:
-              - Content-Type
-              - X-Amz-Date
-              - Authorization
-              - X-Api-Key
-              - X-Amz-Security-Token
-              - X-Amz-User-Agent
-            allowCredentials: true
   loginUser:
     handler: lib/user/login/controller.login
     events:
       - httpApi:
           path: /login
           method: post
-          cors:
-            origin: "*"
   subscribeToEmail:
     handler: lib/user/subscription/controller.subscribe
     events:
       - httpApi:
           path: /subscribe
           method: post
-          cors:
-            origin: "*"
