--- a/nodejs/package.json
+++ b/nodejs/package.json
@@ -15,8 +15,10 @@
     "uuid": "^9.0.0"
   },
   "dependencies": {
+    "@sendgrid/mail": "^7.7.0",
     "dotenv-cli": "^7.0.0",
-    "jsonwebtoken": "9.0.0"
+    "jsonwebtoken": "9.0.0",
+    "nodemailer": "^6.9.1"
   },
   "scripts": {
     "start": "dotenv -e .env.local serverless offline",
