--- a/nodejs/package.json
+++ b/nodejs/package.json
@@ -8,6 +8,7 @@
     "class-validator": "^0.14.0",
     "dotenv": "^16.0.3",
     "jsonwebtoken": "9.0.0",
+    "nodemailer": "^6.9.1",
     "serverless-dynamodb-local": "^0.2.40",
     "serverless-offline": "^12.0.4",
     "serverless-plugin-typescript": "^2.1.4",
@@ -17,8 +18,7 @@
   "dependencies": {
     "@sendgrid/mail": "^7.7.0",
     "dotenv-cli": "^7.0.0",
-    "jsonwebtoken": "9.0.0",
-    "nodemailer": "^6.9.1"
+    "jsonwebtoken": "9.0.0"
   },
   "scripts": {
     "start": "dotenv -e .env.local serverless offline",
