DOG-9 Add ability to only retrieve user information if token is valid

--- a/nodejs/serverless.yml
+++ b/nodejs/serverless.yml
@@ -49,7 +49,7 @@ functions:
     handler: lib/user/controller.getUser
     events:
       - httpApi:
-          path: /{email}
+          path: /
           method: get
   registerUser:
     handler: lib/user/register-user/controller.register
