DOG-12 Add ability to update user information

--- a/nodejs/serverless.yml
+++ b/nodejs/serverless.yml
@@ -69,3 +69,9 @@ functions:
       - httpApi:
           path: /subscribe
           method: post
+  updateUser:
+    handler: lib/user/update-user/controller.updateUser
+    events:
+      - httpApi:
+          path: /update
+          method: post
