--- a/nodejs/package.json
+++ b/nodejs/package.json
@@ -4,6 +4,7 @@
     "@aws-sdk/client-dynamodb": "^3.254.0",
     "aws-lambda": "^1.0.7",
     "aws-sdk": "^2.1303.0",
+    "bcrypt": "^5.1.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "dotenv": "^16.0.3",
