--- a/nodejs/package.json
+++ b/nodejs/package.json
@@ -2,14 +2,16 @@
   "main": "nodejs",
   "devDependencies": {
     "@aws-sdk/client-dynamodb": "^3.254.0",
+    "@npmcli/fs": "^3.1.0",
     "aws-lambda": "^1.0.7",
     "aws-sdk": "^2.1303.0",
-    "bcrypt": "^5.1.0",
+    "bcryptjs": "2.4.3",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "dotenv": "^16.0.3",
     "jsonwebtoken": "9.0.0",
     "nodemailer": "^6.9.1",
+    "node-gyp": "^9.3.1",
     "serverless-dynamodb-local": "^0.2.40",
     "serverless-offline": "^12.0.4",
     "serverless-plugin-typescript": "^2.1.4",
@@ -18,6 +20,7 @@
   },
   "dependencies": {
     "@sendgrid/mail": "^7.7.0",
+    "aws-lambda": "^1.0.7",
     "dotenv-cli": "^7.0.0",
     "jsonwebtoken": "9.0.0"
   },
