--- a/nodejs/tsconfig.json
+++ b/nodejs/tsconfig.json
@@ -7,6 +7,7 @@
             "target": "es5",
             "outDir": ".build",
             "moduleResolution": "node",
+            "experimentalDecorators": true,
             "lib": [
                 "es2015"
             ],
