--- a/nodejs/serverless.yml
+++ b/nodejs/serverless.yml
@@ -43,6 +43,23 @@ resources:
         ProvisionedThroughput:
           ReadCapacityUnits: 1
           WriteCapacityUnits: 1
+    Animal:
+      Type: AWS::DynamoDB::Table
+      Properties:
+        TableName: Animal
+        AttributeDefinitions:
+          - AttributeName: id
+            AttributeType: S
+          - AttributeName: email
+            AttributeType: S
+        KeySchema:
+          - AttributeName: id
+            KeyType: HASH
+          - AttributeName: email
+            KeyType: RANGE
+        ProvisionedThroughput:
+          ReadCapacityUnits: 1
+          WriteCapacityUnits: 1
 
 functions:
   getUser:
@@ -81,3 +98,9 @@ functions:
       - httpApi:
           path: /password
           method: put
+  addAnimal:
+    handler: lib/animal/add-animal/controller.handler
+    events:
+      - httpApi:
+          path: /animal
+          method: post
