DOG-21 Add ability to retrieve list of dogs

--- a/nodejs/serverless.yml
+++ b/nodejs/serverless.yml
@@ -104,3 +104,9 @@ functions:
       - httpApi:
           path: /animal
           method: post
+  getAnimals:
+    handler: lib/animal/get-animals/controller.handler
+    events:
+      - httpApi:
+          path: /animal
+          method: get
