--- a/nodejs/package.json
+++ b/nodejs/package.json
@@ -3,24 +3,18 @@
   "devDependencies": {
     "@aws-sdk/client-dynamodb": "3.254.0",
     "@npmcli/fs": "3.1.0",
-    "aws-lambda": "1.0.7",
     "aws-sdk": "2.1303.0",
-    "bcryptjs": "2.4.3",
     "class-transformer": "0.5.1",
     "class-validator": "0.14.0",
     "dotenv": "16.0.3",
-    "jsonwebtoken": "9.0.0",
     "node-gyp": "9.3.1",
-    "nodemailer": "6.9.1",
     "serverless-dynamodb-local": "0.2.40",
     "serverless-offline": "12.0.4",
     "serverless-plugin-typescript": "2.1.4",
-    "typescript": "4.9.4",
-    "uuid": "9.0.0"
+    "typescript": "4.9.4"
   },
   "dependencies": {
     "@aws-sdk/client-dynamodb": "3.254.0",
-    "@sendgrid/mail": "7.7.0",
     "aws-lambda": "1.0.7",
     "bcryptjs": "2.4.3",
     "class-transformer": "0.5.1",
