--- a/nodejs/serverless.yml
+++ b/nodejs/serverless.yml
@@ -116,6 +116,12 @@ functions:
       - httpApi:
           path: /animal
           method: get
+  getAnimal:
+    handler: lib/animal/get-animal/controller.handler
+    events:
+      - httpApi:
+          path: /animal/{id}
+          method: get
   deleteAnimal:
     handler: lib/animal/delete-animal/controller.handler
     events:
