--- a/nodejs/serverless.yml
+++ b/nodejs/serverless.yml
@@ -60,6 +60,23 @@ resources:
         ProvisionedThroughput:
           ReadCapacityUnits: 1
           WriteCapacityUnits: 1
+    Subscription:
+      Type: AWS::DynamoDB::Table
+      Properties:
+        TableName: Subscription
+        AttributeDefinitions:
+          - AttributeName: id
+            AttributeType: S
+          - AttributeName: email
+            AttributeType: S
+        KeySchema:
+          - AttributeName: id
+            KeyType: HASH
+          - AttributeName: email
+            KeyType: RANGE
+        ProvisionedThroughput:
+          ReadCapacityUnits: 1
+          WriteCapacityUnits: 1
 
 functions:
   getUser:
@@ -128,3 +145,9 @@ functions:
       - httpApi:
           path: /animal/{id}
           method: delete
+  getSubscriptions:
+    handler: lib/subscription/get-subscriptions/controller.handler
+    events:
+      - httpApi:
+          path: /subscriptions
+          method: get
